tests/models/enum/named/isize/fail/min_length.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(min_length = 2)]
        value: isize
    },
}
fn main() {}
